--- a/webclient/public/stylesheets/admin.css
+++ b/webclient/public/stylesheets/admin.css
@@ -250,7 +250,7 @@ table.listing {
 table.listing th {
 	border-top:0 !important;
 	}
-table.listing th.full {border-left:0;border-right:0 !important;text-align:left;text-transform:uppercase;}
+table.listing th.full {border-left:0;border-right:0 !important;text-align:left;}
 div.table img.left {
 	position:absolute;
 	top:0;
