increase timeout for setting language

--- a/webclient/app/views/language/index.rhtml
+++ b/webclient/app/views/language/index.rhtml
@@ -33,7 +33,7 @@
           </tr>
        <% end %>
     </table>
-    <p><%= submit_tag "Save" -%></p>
+    <p><%= submit_tag "Save", :confirm => 'This operation can take a while.' -%></p>
   </div>
  <% end %>
 <% end %>
