--- a/app/views/system_time/index.rhtml
+++ b/app/views/system_time/index.rhtml
@@ -1,8 +1,15 @@
 
 <script language="javascript" src="/javascripts/mootools.v1.11.js"></script>
-<script language="javascript" src="/javascripts/nogray_time_picker_min.js"></script>
+<script language="javascript"
+src="/javascripts/nogray_time_picker_min.js"></script>
 
-<input type="text" name="time2" id="time2" /> <a href="#" id="time2_toggler">Open time picker</a>
+<br><input type="text" name="timezone" id="timezone" value="<%= @timezone %>" <br><br> 
+<input type="checkbox" name="utc" value="true" <%= @is_utc %>> is utc<br><br>
+
+<input type="text" name="time2" id="time2" value="<%= @systemtime %>" /> <a href="#" id="time2_toggler">Open time picker</a>
 <div id="time2_picker" class="time_picker_div"></div>
 <script>var tp = new TimePicker('time2_picker', 'time2', 'time2_toggler',
-  {visible:true, imagesPath:"/images"});</script>
+  {visible:true, imagesPath:"/images"});</script> 
+<br><br>
+<%= button_to "Commit", {:action => :commit_time, :id => "test" stefan => "peter"} %>
+
