login,logout with web-service

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,4 +3,8 @@
 <ul>
 <li><%= link_to "Time", :controller => "system_time" %></li>
 <li><%= link_to "System Services", :controller => "services" %></li>
+<br>
+<br>
+<h2><%= link_to "logout", logout_url -%></h2>
+
 </ul>
