--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,6 +5,6 @@
 <li><%= link_to "System Services", :controller => "services" %></li>
 <br>
 <br>
-<li><%= link_to "logout", logout_url -%></li>
-<li><%= link_to "yast-web-services", :controller => 'webservices' -%></li>
+<li><%= link_to "Logout", logout_url -%></li>
+<li><%= link_to "YaST-Web-Services", :controller => 'webservices' -%></li>
 </ul>
