--- a/app/views/services/index.rhtml
+++ b/app/views/services/index.rhtml
@@ -7,7 +7,7 @@
 <% 
 @services.each do | s |
 %>
-<tr><td><%= s.link %></td></tr>
+<tr><td><%= link_to s.link, :action => s.link %></td></tr>
 <% end %>
 </table>
 
