--- a/app/views/services/index.rhtml
+++ b/app/views/services/index.rhtml
@@ -10,4 +10,7 @@
 <tr><td><%= link_to s.link, :action => s.link %></td></tr>
 <% end %>
 </table>
+<br>
+<%= link_to 'Back', :controller => 'main' %>
+
 
