--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,4 +1,8 @@
 <% name = @serviceId -%>
 <h3><%= @serviceId %></h3>
 <%= link_to "commands", :action => @serviceId, :id => "commands" %><br/>
-<%= link_to "config", :action => @serviceId, :id => "config" %><br/>
+<% if @serviceId == "ntp" %>
+   <%= link_to "config", :action => @serviceId, :id => "config" %><br/>
+<% end %>
+<BR/>
+<%= link_to 'Back', :controller => 'services' %>
