added ntp configuration and users

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,6 +3,7 @@
 <ul>
 <li><%= link_to "Time", :controller => "system_time" %></li>
 <li><%= link_to "System Services", :controller => "services" %></li>
+<li><%= link_to "User", :controller => "users" %></li>
 <br>
 <br>
 <li><%= link_to "Logout", logout_url -%></li>
