added language support

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,6 +2,7 @@
 
 <ul>
 <li><%= link_to "Time", :controller => "system_time" %></li>
+<li><%= link_to "Language", :controller => "language" %></li>
 <li><%= link_to "System Services", :controller => "services" %></li>
 <li><%= link_to "User", :controller => "users" %></li>
 <br>
