--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,6 +5,7 @@
 <li><%= link_to "Language", :controller => "language" %></li>
 <li><%= link_to "System Services", :controller => "services" %></li>
 <li><%= link_to "User", :controller => "users" %></li>
+<li><%= link_to "Install Patches", :controller => "patch_updates" -%></li>
 <br>
 <br>
 <li><%= link_to "Logout", logout_url -%></li>
