--- a/webclient/app/views/permission/index.rhtml
+++ b/webclient/app/views/permission/index.rhtml
@@ -20,29 +20,6 @@
   <%= submit_tag "Search" %>
 <% end %>
 
-
-<% revoke_data="var revoke_data = \n"+
-	     "[0, { label: \"Cat 1\", href:\"http://www.yahoo.com\" },\n"+
-	     " 1, { label: \"Cat 1.1\", href:\"http://www.yahoo.com\" },\n"+
-             " 1, { label: \"Cat 1.2\", href:\"http://www.yahoo.com\" },\n"+
-	     " 2, { label: \"Cat 1.2.1\", href:\"http://www.yahoo.com\" },\n"+
-	     " 2, { label: \"Cat 1.2.2\", href:\"http://www.yahoo.com\" },\n"+
-	     " 1, { label: \"Cat 1.3\", href:\"http://www.yahoo.com\" },\n"+
-	     " 0, { label: \"Cat 2\", href:\"http://www.yahoo.com\" }];" %>
-
-<% grant_data="var grant_data = \n"+
-	     "[0, { label: \"Cat 1\", href:\"http://www.yahoo.com\" },\n"+
-	     " 1, { label: \"Cat 1.1\", href:\"http://www.yahoo.com\" },\n"+
-             " 1, { label: \"Cat 1.2\", href:\"http://www.yahoo.com\" },\n"+
-	     " 2, { label: \"Cat 1.2.1\", href:\"http://www.yahoo.com\" },\n"+
-	     " 2, { label: \"Cat 1.3.1\", href:\"http://www.yahoo.com\" },\n"+
-	     " 2, { label: \"Cat 1.3.2\", href:\"http://www.yahoo.com\" },\n"+
-	     " 2, { label: \"Cat 1.2.2\", href:\"http://www.yahoo.com\" },\n"+
-	     " 1, { label: \"Cat 1.3\", href:\"http://www.yahoo.com\" },\n"+
-	     " 0, { label: \"Cat 2\", href:\"http://www.yahoo.com\" }];" %>
-
-
-
 <table border="1" align="left" hspace=1 vspace=1>
 <colgroup>
 <col width="200" span="2">
@@ -59,12 +36,12 @@
 
     <script type="text/javascript">
     //<![CDATA[
-       <%= "#{revoke_data}" %>
+       <%= "#{@revoke_data}" %>
     //]]>
 
     //<![CDATA[
 
-    function addChildrenNodes(currLevel, nodeIndex, parent) {
+    function revokeAddChildrenNodes(currLevel, nodeIndex, parent) {
       var lastNode;
       var level = currLevel;
 
@@ -76,7 +53,7 @@
         } else if (level < currLevel) {
            return nodeIndex;
         } else {
-           nodeIndex = addChildrenNodes(level, nodeIndex, lastNode);
+           nodeIndex = revokeAddChildrenNodes(level, nodeIndex, lastNode);
         }
       }
       return nodeIndex;
@@ -84,7 +61,7 @@
 
     function revoketree_Init() {
       var tree = new YAHOO.widget.TreeView("revoketree");
-      addChildrenNodes(0, 0, tree.getRoot());
+      revokeAddChildrenNodes(0, 0, tree.getRoot());
       tree.draw();
     }
 
@@ -101,12 +78,12 @@
 
     <script type="text/javascript">
     //<![CDATA[
-       <%= "#{grant_data}" %>
+       <%= "#{@grant_data}" %>
     //]]>
     
     //<![CDATA[
     
-    function addChildrenNodes(currLevel, nodeIndex, parent) {
+    function grantAddChildrenNodes(currLevel, nodeIndex, parent) {
       var lastNode;
       var level = currLevel;
   
@@ -118,7 +95,7 @@
         } else if (level < currLevel) {
            return nodeIndex;
         } else {
-           nodeIndex = addChildrenNodes(level, nodeIndex, lastNode);
+           nodeIndex = grantAddChildrenNodes(level, nodeIndex, lastNode);
         }
       }
       return nodeIndex;
@@ -126,7 +103,7 @@
 
     function granttree_Init() {
       var tree = new YAHOO.widget.TreeView("granttree");
-      addChildrenNodes(0, 0, tree.getRoot());
+      grantAddChildrenNodes(0, 0, tree.getRoot());
       tree.draw();
     }
 
