--- a/webclient/public/stylesheets/admin.css
+++ b/webclient/public/stylesheets/admin.css
@@ -217,6 +217,7 @@ ul.nav li.last {background:none;}
 	height:35px;
 	text-align:center;
 	color:#fff;
+	text-transform:uppercase;
 	font-weight:bold;
 	line-height:27px;
 	background:url(../images/bg-orange-button.gif) no-repeat;
@@ -333,10 +334,10 @@ div.table .select select {
 	color:#333;
 	font-size:12px;
         font-weight: bold;
-	width:150px;
+	width:140px;
 	padding:5px;
 	border:1px solid #B8B8B8;
-	margin:5px 0 5px 0;
+	margin:5px 0 15px 0;
 	}
 	
 /* right column box */
