--- a/webclient/public/stylesheets/admin.css
+++ b/webclient/public/stylesheets/admin.css
@@ -265,7 +265,7 @@ div.table img.right {
 table.listing td,
 table.listing th {
 	border:1px solid #fff;
-	text-align:center;
+	text-align:left;
 	}	
 table.listing th {
 	background:#9097A9;
