--- a/webclient/app/views/webservices/edit.html.erb
+++ b/webclient/app/views/webservices/edit.html.erb
@@ -1,20 +1,25 @@
-<h1>Editing webservice</h1>
+<h1>Editing YaST-Web-Service</h1>
 
 <% form_for(@webservice) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :desc %><br />
-    <%= f.text_area :desc %>
-  </p>
-  <p>
-    <%= f.submit "Update" %>
-  </p>
+  <div class="table">
+    <img src="images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
+    <img src="images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+    <table class="listing form" cellpadding="0" cellspacing="0">
+    <tr>
+ 	<th class="full" colspan="2">YaST-Web-Service</th>
+    </tr>
+    <tr>
+	<td class="first" width="120"><strong>URL</strong></td>
+	<td class="last"><%= f.text_field :name %></td>
+    </tr>
+    <tr class="bg">
+	<td class="first"><strong>Description</strong></td>
+	<td class="last"><%= f.text_field :desc %></td>
+    </tr>
+    </table>
+  <p><%= f.submit "Update" %><%= link_to 'Back', webservices_path, :class => "button" %></p>
+  </div>
 <% end %>
 
-<%= link_to 'Show', @webservice %> |
-<%= link_to 'Back', webservices_path %>
