--- a/webclient/app/views/webservices/index.html.erb
+++ b/webclient/app/views/webservices/index.html.erb
@@ -1,25 +1,28 @@
-<h1>Listing webservices</h1>
+<h1>YaST-Web-Services</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Desc</th>
-  </tr>
-
-<% for webservice in @webservices %>
-  <tr>
-    <td><%=h webservice.name %></td>
-    <td><%=h webservice.desc %></td>
-    <td><%= link_to 'Show', webservice %></td>
-    <td><%= link_to 'Edit', edit_webservice_path(webservice) %></td>
-    <td><%= link_to 'Destroy', webservice, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New webservice', new_webservice_path %>
-<br>
-<%= link_to 'Back', :controller => 'main' %>
+<div class="table">
+   <img src="images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
+   <img src="images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+   <table class="listing" cellpadding="0" cellspacing="0">
+      <tr>
+	<th class="first" width=25%>URL</th>
+	<th width="100">Description</th>
+	<th width=8%>Edit</th>
+	<th class="last" width=8%>Delete</th>
+      </tr>
+      <% for webservice in @webservices %>
+         <tr>
+            <td class="first"><strong><%=h webservice.name %></strong></td>
+            <td><%=h webservice.desc %></td>
+            <td><%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"), edit_webservice_path(webservice) %></td>
+            <td class="last"><%= link_to image_tag("/images/delete.png", :alt =>  "delete"), 
+                              webservice, :confirm => 'Are you sure?', :method => :delete %></td>
+        </tr>
+      <% end %>
+   </table>
+   <div class="select">
+       <%= link_to "<strong>[New YaST-Web-Service]</strong>", new_webservice_path -%><p/>
+    </div>
+</div>
+<a href="/" class="button">Back</a>
 
