--- a/webclient/app/views/patch_updates/index.html.erb
+++ b/webclient/app/views/patch_updates/index.html.erb
@@ -1,36 +1,36 @@
 <h1>Available Patches</h1>
 
-<table>
-  <tr>
-    <th>resolvableId</th>
-    <th>Kind</th>
-    <th>Name</th>
-    <th>Arch</th>
-    <th>Repo</th>
-    <th>Summary</th>
-  </tr>
 
-<% for patch_update in @patch_updates %>
-  <% if patch_update.error_id != 0 %>
-    <tr>
-     <td>Error ID: <%= patch_update.error_id -%> Error: <%= patch_update.error_string -%></td>
-    </tr>
-  <% else %>
-    <tr>
-      <td><%=h patch_update.resolvableId %></td>
-      <td><%=h patch_update.kind %></td>
-      <td><%=h patch_update.name %></td>
-      <td><%=h patch_update.arch %></td>
-      <td><%=h patch_update.repo %></td>
-      <td><%=h patch_update.summary %></td>
-      <td><%= link_to 'Install', patch_update_path(patch_update.resolvableId), :confirm => 'Are you sure?', :method => :post, :action => "install" %></td>
-    </tr>
-  <% end %>
-<% end %>
-</table>
-
-<br/>
-<br>
-<%= link_to 'Back', :controller => 'main' %>
-
-
+<div class="table">
+   <img src="images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
+   <img src="images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+   <table class="listing" cellpadding="0" cellspacing="0">
+      <tr>
+	<th class="first" width=8%>Kind</th>
+	<th width=15%>Name</th>
+	<th width="100">Summary</th>
+	<th width=15%>Source</th>
+	<th class="last" width=8%>Install</th>
+      </tr>
+      <% for patch_update in @patch_updates %>
+         <% if patch_update.error_id != 0 %>
+            <tr>
+               <td>Error ID: <%= patch_update.error_id -%> Error: <%= patch_update.error_string -%></td>
+            </tr>
+         <% else %>
+            <tr>
+              <% if patch_update.kind == "important" || patch_update.kind == "security" %>
+                 <td class="first style1"><%=h patch_update.kind %></td>
+              <% else %>
+                 <td><%=h patch_update.kind %></td>
+              <% end %>
+              <td><%=h patch_update.name %></td>
+              <td><%=h patch_update.summary %></td>
+              <td><%=h patch_update.repo %></td>
+              <td><%= link_to image_tag("/images/add-icon.gif", :alt =>  "install"), 
+                      patch_update_path(patch_update.resolvableId), :confirm => 'Are you sure?', :method => :post, :action => "install" %></td>
+           </tr>
+         <% end %>
+      <% end %>
+   </table>
+</div>
